fix: update paymaster label text

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -127,7 +127,7 @@
             "value": "Value",
             "valueTooltip": "Amount of Ether being transferred from one address to another within a transaction.",
             "fee": "Fee",
-            "paidByPaymaster": "Paid by paymaster",
+            "paidByPaymaster": "Paid by Paymaster",
             "feeDetails": {
                 "moreDetails": "More Details",
                 "closeDetails": "Close Details",
@@ -135,7 +135,7 @@
                 "refunded": "Refunded:",
                 "refunds": "Refunds:",
                 "whyRefunded": "Why I'm being refunded?",
-                "whyPaymasterRefunded": "Why paymaster is being refunded?",
+                "whyPaymasterRefunded": "Why Paymaster is being refunded?",
                 "whatIsPaymaster": "What is Paymaster?",
                 "paymaster": "Paymaster"
             },
