fix: why paymaster label

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -135,7 +135,7 @@
                 "refunded": "Refunded:",
                 "refunds": "Refunds:",
                 "whyRefunded": "Why I'm being refunded?",
-                "whyPaymasterRefunded": "Why Paymaster is being refunded?",
+                "whyPaymasterRefunded": "Why is Paymaster being refunded?",
                 "whatIsPaymaster": "What is Paymaster?",
                 "paymaster": "Paymaster"
             },
