fix: why refunded label

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -134,7 +134,7 @@
                 "initial": "Initial:",
                 "refunded": "Refunded:",
                 "refunds": "Refunds:",
-                "whyRefunded": "Why I'm being refunded?",
+                "whyRefunded": "Why am I being refunded?",
                 "whyPaymasterRefunded": "Why is Paymaster being refunded?",
                 "whatIsPaymaster": "What is Paymaster?",
                 "paymaster": "Paymaster"
