feat: add API docs to the menu

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -145,6 +145,7 @@
     "header": {
         "nav": {
             "tools": "Інструменти",
+            "apiDocs": "АРІ Документація",
             "contractVerification": "Верифікація Смарт контракту",
             "debugger": "zkEVM Налагоджувач",
             "blockExplorer": "Провідник",
