--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -289,6 +289,7 @@
             "portal": "Portal",
             "documentation": "Documentation",
             "tools": "Tools",
+            "apiDocs": "API Documentation",
             "contractVerification": "Smart Contract Verification",
             "debugger": "zkEVM Debugger",
             "bridge": "Bridge"
