--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -1,6 +1,5 @@
 {
     "general": {
-        "checkHere": "Перевірити тут",
         "l2NetworkName": "zkSync Era",
         "l1NetworkName": "Ethereum"
     },
@@ -37,8 +36,7 @@
             "notYetProven": "Ще не підтверджений",
             "executeTxHash": "Виконання хешу",
             "executedAt": "Виконаний",
-            "notYetExecuted": "Ще не виконано",
-            "newProverInfo": "Цей блок був також підтверджений нашим новим майбутнім прувером, Boojum. Бажаєте дізнатися більше та перевірити самостійно?"
+            "notYetExecuted": "Ще не виконано"
         },
         "status": {
             "verified": "Перевірено",
@@ -99,8 +97,7 @@
                 "showMore": "Показати більше транзакцій ->",
                 "unableToLoadMore": "Неможливо завантажити більше",
                 "tryAgain": "Спробуйте знову ->"
-            },
-            "newProverInfo": "Ця транзакція була також підтверджена нашим новим майбутнім прувером, Boojum. Бажаєте дізнатися більше та перевірити самостійно?"
+            }
         },
         "logs": {
             "address": "Адреса",
