feat: add token offchain data provider attribution

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -328,6 +328,7 @@
     "tokenListView": {
         "title": "Список Токенів",
         "heading": "Токени",
+        "offChainDataPoweredBy": "Off-chain дані взяті з",
         "table": {
             "tokenName": "Назва Токена",
             "price": "Ціна",
