feat: add coingecko token offchain data provider (#102)
# What ❔

- add coingecko tokens off-chain data provider

## Why ❔

- to support both L1 and L2 zksync tokens

## Checklist

<!-- Check your PR fulfills the following items. -->
<!-- For draft PRs check the boxes as you complete them. -->

- [+ ] PR title corresponds to the body of PR (we generate changelog
entries from PRs).
- [ +] Tests for the changes have been added / updated.

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -583,6 +583,7 @@
     "tokenListView": {
         "title": "Token List",
         "heading": "Tokens",
+        "offChainDataPoweredBy": "Off-chain data powered by",
         "table": {
             "tokenName": "Token Name",
             "price": "Price",
