fix: rename tokens page title to top tokens

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -323,8 +323,8 @@
         "title": "Транзакції"
     },
     "tokenListView": {
-        "title": "Список Токенів",
-        "heading": "Токени",
+        "title": "Top токени",
+        "heading": "Top токени",
         "offChainDataPoweredBy": "Off-chain дані взяті з",
         "table": {
             "tokenName": "Назва Токена",
