--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -212,7 +212,7 @@
     },
     "contractVerification": {
         "title": "Верифікація Смарт контракту",
-        "subtitle": "Перевірка вихідного коду забезпечує прозорість для користувачів, які взаємодіють зі смарт-контрактами. Завантаживши вихідний код, zkScan зіставить скомпільований код із кодом у блокчейні.",
+        "subtitle": "Перевірка вихідного коду забезпечує прозорість для користувачів, які взаємодіють зі смарт-контрактами. Завантаживши вихідний код, Era Explorer зіставить скомпільований код із кодом у блокчейні.",
         "form": {
             "title": "Деталі Контракту",
             "compilationInfo": "Деталі компіляції",
