feat: show gas fields on UI (#114)
# What ❔

<img width="441" alt="image"
src="https://github.com/matter-labs/block-explorer/assets/6553665/b69c7a82-4f3a-4afa-abc5-8b7385a5079d">

## Why ❔

For better user experience it was requested to show gas fields and
limits on UI.

## Checklist

<!-- Check your PR fulfills the following items. -->
<!-- For draft PRs check the boxes as you complete them. -->

- [X] PR title corresponds to the body of PR (we generate changelog
entries from PRs).
- [X] Tests for the changes have been added / updated.

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -100,7 +100,15 @@
                 "showMore": "Показати більше транзакцій ->",
                 "unableToLoadMore": "Неможливо завантажити більше",
                 "tryAgain": "Спробуйте знову ->"
-            }
+            },
+            "gasLimitAndUsed": "Газ ліміт & використано",
+            "gasLimitAndUsedTooltip": "Максимальна кількість виділеного газу для транзакції та кількість фактично використаного газу.",
+            "gasPerPubdata": "Газ за pubdata",
+            "gasPerPubdataTooltip": "Максимальна кількість газу, яку користувач готовий сплатити за один байт опублікованих даних (pubdata).",
+            "maxFeePerGas": "Макс комісія",
+            "maxFeePerGasTooltip": "Максимальна комісія, яку користувач готовий заплатити за свою транзакцію.",
+            "maxPriorityFeePerGas": "Макс пріоритетна комісія",
+            "maxPriorityFeePerGasTooltip": "Максимальна комісія, яку користувач готовий віддати блок-продюсеру."
         },
         "logs": {
             "address": "Адреса",
