--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -164,11 +164,7 @@
             "gasLimitAndUsed": "Gas limit & used",
             "gasLimitAndUsedTooltip": "Maximum amount of gas allocated for the transaction & the amount eventually used.",
             "gasPerPubdata": "Gas per pubdata",
-            "gasPerPubdataTooltip": "Maximum amount of gas the user is willing to pay for a single byte of published data (pubdata).",
-            "maxFeePerGas": "Max fee",
-            "maxFeePerGasTooltip": "Maximum amount a user is willing to pay for their tx.",
-            "maxPriorityFeePerGas": "Max priority fee",
-            "maxPriorityFeePerGasTooltip": "Maximum amount a user is willing to give to the block producer."
+            "gasPerPubdataTooltip": "Maximum amount of gas the user is willing to pay for a single byte of published data (pubdata)."
         },
         "logs": {
             "name": "Name",
@@ -584,9 +580,9 @@
     "transactionsView": {
         "title": "Transactions"
     },
-    "tokenListView": {
-        "title": "Top tokens",
-        "heading": "Top tokens",
+    "tokensView": {
+        "title": "Tokens",
+        "heading": "Tokens",
         "offChainDataPoweredBy": "Off-chain data powered by",
         "table": {
             "tokenName": "Token Name",
