--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -104,11 +104,7 @@
             "gasLimitAndUsed": "Газ ліміт & використано",
             "gasLimitAndUsedTooltip": "Максимальна кількість виділеного газу для транзакції та кількість фактично використаного газу.",
             "gasPerPubdata": "Газ за pubdata",
-            "gasPerPubdataTooltip": "Максимальна кількість газу, яку користувач готовий сплатити за один байт опублікованих даних (pubdata).",
-            "maxFeePerGas": "Макс комісія",
-            "maxFeePerGasTooltip": "Максимальна комісія, яку користувач готовий заплатити за свою транзакцію.",
-            "maxPriorityFeePerGas": "Макс пріоритетна комісія",
-            "maxPriorityFeePerGasTooltip": "Максимальна комісія, яку користувач готовий віддати блок-продюсеру."
+            "gasPerPubdataTooltip": "Максимальна кількість газу, яку користувач готовий сплатити за один байт опублікованих даних (pubdata)."
         },
         "logs": {
             "address": "Адреса",
@@ -333,7 +329,7 @@
     "transactionsView": {
         "title": "Транзакції"
     },
-    "tokenListView": {
+    "tokensView": {
         "title": "Top токени",
         "heading": "Top токени",
         "offChainDataPoweredBy": "Off-chain дані взяті з",
