feat: add automatic system alert banner

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -438,5 +438,9 @@
                 "callData": "дані виклику"
             }
         }
+    },
+    "systemAlert": {
+        "indexerDelayed": "Індексація транзакцій відстає на {indexerDelayInHours} годин. Транзакції будуть поступово оброблені та відображені. Ви також можете скористатися іншими блок експлорерами такими як <a href=\"https://hyperscan.xyz/\">hyperscan.xyz</a> наразі.",
+        "indexerDelayedDueToHeavyLoad": "Мережа наразі перебуває під великим навантаженням, індексація транзакцій відстає на {indexerDelayInHours} годин. Транзакції будуть поступово оброблені та відображені. Ви також можете скористатися іншими блок експлорерами такими як <a href=\"https://hyperscan.xyz/\">hyperscan.xyz</a> наразі."
     }
 }
