--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -721,5 +721,9 @@
                 "callData": "calldata"
             }
         }
+    },
+    "systemAlert": {
+        "indexerDelayed": "Transaction indexing is {indexerDelayInHours} hours behind. Transactions are being processed normally and will gradually show up. You can also use other explorers like <a href=\"https://hyperscan.xyz/\">hyperscan.xyz</a> meanwhile.",
+        "indexerDelayedDueToHeavyLoad": "The network is under a heavy load at the moment and transaction indexing on the explorer is {indexerDelayInHours} hours behind. Transactions are being processed normally and will gradually show up. You can also use other explorers like <a href=\"https://hyperscan.xyz/\">hyperscan.xyz</a> meanwhile."
     }
 }
