--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -457,7 +457,8 @@
                 "validation": {
                     "required": "Solc version is required"
                 },
-                "error": "Unable to get list of supported Solc versions"
+                "error": "Unable to get list of supported Solc versions",
+                "zkVM": "zkVM"
             },
             "zksolcVersion": {
                 "label": "Zksolc Version",
