feat: show state root signature and signing key for each L1 batch

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -276,7 +276,9 @@
             "verified": "Executed on",
             "sealed": "Processed on",
             "failed": "Failed"
-        }
+        },
+        "signedStateRoot": "Signed Batch Root",
+        "stateRootSigningPubkey" : "Batch Root Signing Key"
     },
     "header": {
         "nav": {
