fix: rename root hash to block hash

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -26,8 +26,8 @@
             "timestamp": "Створено",
             "blockNumber": "Номер",
             "blockSize": "Розмір",
-            "rootHash": "Кореневий хеш",
-            "noRootHashYet": "Ще немає кореневого хешу",
+            "blockHash": "Хеш блоку",
+            "noBlockHashYet": "Ще немає хешу блоку",
             "committedAt": "Затверджений",
             "commitTxHash": "Завірений хеш",
             "notYetCommitted": "Ще не затверджено",
