--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -1,6 +1,6 @@
 {
     "general": {
-        "l2NetworkName": "zkSync Era",
+        "l2NetworkName": "Sophon",
         "l1NetworkName": "Ethereum"
     },
     "copyButton": {
@@ -15,7 +15,7 @@
     "networkStats": {
         "title": "Network Stats",
         "subtitleTestnet": "Stats are occasionally reset on testnet.",
-        "subtitleMainnet": "zkSync Era Mainnet is open to everyone.",
+        "subtitleMainnet": "Sophon Mainnet is open to everyone.",
         "committed": "Committed Blocks",
         "verified": "Verified Blocks",
         "transactions": "Transactions",
@@ -309,8 +309,8 @@
         "subtitle": "zkRollups significantly cheaper than L1 or Optimistic Rollups"
     },
     "blockExplorer": {
-        "title": "zkSync Era Block Explorer",
-        "subtitle": "zkSync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into zkSync Era and explore the network.",
+        "title": "Sophon Block Explorer",
+        "subtitle": "Sophon Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into Sophon and explore the network.",
         "latestBlocks": "Latest Blocks",
         "latestTransactions": "Latest Transactions",
         "batches": "Latest Batches"
@@ -664,7 +664,7 @@
         }
     },
     "document": {
-        "title": "zkSync Era Block Explorer",
+        "title": "Sophon Block Explorer",
         "home": "Transactions, Blocks, Contracts and much more"
     },
     "notFound": {
@@ -674,11 +674,11 @@
         "contactSupport": "contact support"
     },
     "maintenance": {
-        "title": "zkSync {network} is on maintainance",
-        "description": "zkSync {network} is unavailable due to maintainance, you can find updates in our {twitter} or on {uptime}",
-        "twitterLink": "zkSync Developers",
+        "title": "Sophon {network} is on maintainance",
+        "description": "Sophon {network} is unavailable due to maintainance, you can find updates in our {twitter} or on {uptime}",
+        "twitterLink": "Sohpon Developers",
         "uptimeLink": "UpTime",
-        "twitterButton": "zkSync Developers"
+        "twitterButton": "Sophon Developers"
     },
     "tabs": {
         "transactions": "Transactions",
@@ -723,7 +723,7 @@
         }
     },
     "systemAlert": {
-        "indexerDelayed": "Transaction indexing is {indexerDelayInHours} hours behind. Transactions are being processed normally and will gradually show up. You can also use other <a href=\"https://zksync.io/explore/\" style=\"color: inherit\">explorers</a> meanwhile.",
-        "indexerDelayedDueToHeavyLoad": "The network is under a heavy load at the moment and transaction indexing on the explorer is {indexerDelayInHours} hours behind. Transactions are being processed normally and will gradually show up. You can also use other <a href=\"https://zksync.io/explore/\" style=\"color: inherit\">explorers</a> meanwhile."
+        "indexerDelayed": "Transaction indexing is {indexerDelayInHours} hours behind. Transactions are being processed normally and will gradually show up. You can also use other <a href=\"https://sophon.xyz/explore/\" style=\"color: inherit\">explorers</a> meanwhile.",
+        "indexerDelayedDueToHeavyLoad": "The network is under a heavy load at the moment and transaction indexing on the explorer is {indexerDelayInHours} hours behind. Transactions are being processed normally and will gradually show up. You can also use other <a href=\"https://sophon.xyz/explore/\" style=\"color: inherit\">explorers</a> meanwhile."
     }
 }
