--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -1,6 +1,6 @@
 {
     "general": {
-        "l2NetworkName": "ZKsync Era",
+        "l2NetworkName": "Treasure Topaz",
         "l1NetworkName": "Ethereum"
     },
     "copyButton": {
@@ -15,7 +15,7 @@
     "networkStats": {
         "title": "Network Stats",
         "subtitleTestnet": "Stats are occasionally reset on testnet.",
-        "subtitleMainnet": "ZKsync Era Mainnet is open to everyone.",
+        "subtitleMainnet": "Treasure Topaz Mainnet is open to everyone.",
         "committed": "Committed Blocks",
         "verified": "Verified Blocks",
         "transactions": "Transactions",
@@ -309,8 +309,8 @@
         "subtitle": "zkRollups significantly cheaper than L1 or Optimistic Rollups"
     },
     "blockExplorer": {
-        "title": "ZKsync Era Block Explorer",
-        "subtitle": "ZKsync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into ZKsync Era and explore the network.",
+        "title": "Treasure Topaz Block Explorer",
+        "subtitle": "Treasure Topaz Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into Treasure Topaz and explore the network.",
         "latestBlocks": "Latest Blocks",
         "latestTransactions": "Latest Transactions",
         "batches": "Latest Batches"
@@ -664,7 +664,7 @@
         }
     },
     "document": {
-        "title": "ZKsync Era Block Explorer",
+        "title": "Treasure Topaz Block Explorer",
         "home": "Transactions, Blocks, Contracts and much more"
     },
     "notFound": {
