feat: add siwe login to app

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -12,6 +12,11 @@
         "metaMaskNotFound": "MetaMask not found",
         "logout": "Logout"
     },
+    "loginButton": {
+        "label": "Login",
+        "connecting": "Connecting...",
+        "logout": "Logout"
+    },
     "networkStats": {
         "title": "Network Stats",
         "subtitleTestnet": "Stats are occasionally reset on testnet.",
