--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -347,6 +347,10 @@
             "notFound": {
                 "title": "This smart contract doesn’t have any balances",
                 "subtitle": "We can’t find any balances related to this smart-contract."
+            },
+            "unauthorized": {
+                "title": "Contract Access Restricted",
+                "subtitle": "You don't have permission to view the balance of this contract. Please verify the address and try again."
             }
         },
         "table": {
@@ -655,6 +659,10 @@
             "notFound": {
                 "title": "This account doesn’t have any balances",
                 "subtitle": "We can’t find any balances related to this account."
+            },
+            "unauthorized": {
+                "title": "Account Access Restricted",
+                "subtitle": "You don't have permission to view the balance of this account. Please verify the address and try again."
             }
         }
     },
