feat: display badges for verified contracts

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -326,6 +326,7 @@
         "infoTableError": "An Error Occurred",
         "balanceTableTitle": "Balances",
         "notFound": "Not Found",
+        "verified": "Verified",
         "transactionTable": {
             "error": "Something went wrong",
             "notFound": {
