fix: e2e tests and address feedback

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -326,7 +326,7 @@
         "infoTableError": "An Error Occurred",
         "balanceTableTitle": "Balances",
         "notFound": "Not Found",
-        "verified": "Verified",
+        "verified": "Source Code",
         "transactionTable": {
             "error": "Something went wrong",
             "notFound": {
