--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -189,6 +189,7 @@
         "balanceTableTitle": "Мої кошти",
         "notFound": "Не знайдено",
         "verified": "вихідний код",
+        "verifiedTooltip": "Вихідний код контракту було перевірено на відповідність його байт-коду в ланцюжку. Перевірка вихідного коду не означає, що контракт безпечний для взаємодії.",
         "transactionTable": {
             "error": "Щось пішло не так",
             "notFound": {
